--- a/Vidly/Views/Account/ExternalLoginConfirmation.cshtml
+++ b/Vidly/Views/Account/ExternalLoginConfirmation.cshtml
@@ -1,10 +1,9 @@
-﻿@model Vidly.Models.ExternalLoginConfirmationViewModel
+﻿@model Vidly.ViewModels.ExternalLoginConfirmationViewModel
 @{
     ViewBag.Title = "Register";
 }
 <h2>@ViewBag.Title.</h2>
 <h3>Associate your @ViewBag.LoginProvider account.</h3>
-
 @using (Html.BeginForm("ExternalLoginConfirmation", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
     @Html.AntiForgeryToken()
@@ -25,12 +24,25 @@
         </div>
     </div>
     <div class="form-group">
+        @Html.LabelFor(m => m.DriversLicense, new { @class = "col-md-2 control-label" })
+        <div class="col-md-10">
+            @Html.TextBoxFor(m => m.DriversLicense, new { @class = "form-control" })
+            @Html.ValidationMessageFor(m => m.DriversLicense, "", new { @class = "text-danger" })
+        </div>
+    </div>
+    <div class="form-group">
+        @Html.LabelFor(m => m.Phone, new { @class = "col-md-2 control-label" })
+        <div class="col-md-10">
+            @Html.TextBoxFor(m => m.Phone, new { @class = "form-control" })
+            @Html.ValidationMessageFor(m => m.Phone, "", new { @class = "text-danger" })
+        </div>
+    </div>
+    <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
             <input type="submit" class="btn btn-default" value="Register" />
         </div>
     </div>
 }
-
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
 }
